--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^4.17.0",
     "gatsby-transformer-sharp": "^4.17.0",
     "react": "^18.1.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.1.0"
   }
 }
