--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^4.17.0",
     "gatsby-plugin-image": "^2.17.0",
     "gatsby-plugin-manifest": "^4.17.0",
+    "gatsby-plugin-netlify": "^5.0.0",
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-plugin-sitemap": "^5.17.0",
     "gatsby-source-filesystem": "^4.17.0",
