--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-manifest": "^4.17.0",
     "gatsby-plugin-material-ui": "^4.1.0",
     "gatsby-plugin-netlify": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^5.17.0",
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-plugin-sitemap": "^5.17.0",
     "gatsby-source-filesystem": "^4.17.0",
@@ -29,6 +30,7 @@
     "react": "^18.1.0",
     "react-code-blocks": "^0.0.9-0",
     "react-comparison-slider": "^1.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0"
   }
 }
